--- a/Pertemuan_2/4iframe.html
+++ b/Pertemuan_2/4iframe.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iframe</title>
 </head>
 <body>
-    <iframe src="google.com" frameborder="0"></iframe>
+    <center><h1>Halaman Dari Link.html</h1></center>
+    <center>
+        <iframe src="1link.html" frameborder="0" width="80%" height="400px"></iframe>
+    </center>
 </body>
 </html>
