--- a/Pertemuan_3/1link.html
+++ b/Pertemuan_3/1link.html
@@ -10,7 +10,7 @@
     <a href="https://freepng.pictures/download/fish-3/">
         <img src="https://purepng.com/public/uploads/large/91508177282ridnmj7jqmzdl6kti5gte7z4tquaei8z8698qhvrbgbeamla3xnjgd83vkvs3b2cuohgxxpzphxvuvslp0bk6rykffhqizclgd3d.png" width="100px" alt="">
     </a>
-    <p>klik <a href="google.com">ini</a> untuk membuka google</p>
+    <p>klik <a href="https://google.com">ini</a> untuk membuka google</p>
     <p>buka <a href="2frameset.html">ini</a> untuk melihat contoh frameset</p>
     <p>Menuju ke <a href="#footer">footer</a></p>
     <ol>
