--- a/Pertemuan_3/2frameset.html
+++ b/Pertemuan_3/2frameset.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frameset</title>
-</head>
-<body>
+<html>
     <frameset rows="50%,50%">
-        <frame src="1link.html">
-        <frame src="1link.html">
-        <frame src="1link.html">
+        <frame src="https://ugm.ac.id">
+            <frameset cols="25%,25%">
+                <frame src="https://uns.ac.id">
+                <frame src="https://ub.ac.id">
+            </frameset>
     </frameset>
-</body>
 </html>
