--- a/Pertemuan_3/9layout.html
+++ b/Pertemuan_3/9layout.html
@@ -6,20 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="1">
+    <table border="0">
         <tr>
             <td colspan="2">
-                <iframe src="https://ugm.ac.id" frameborder="0" width="200%" height="200px"></iframe>
+                <h1>IPSUM</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vitae accusamus officiis earum sed inventore repellendus magnam similique assumenda est.
             </td>
         </tr>
         <tr>
             <td>
-                <iframe src="https://ugm.ac.id" frameborder="0" width="100%" height="200px"></iframe>                
+                <h1>LOREM</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aut obcaecati vero et accusantium architecto delectus cumque inventore magnam non libero cupiditate excepturi voluptas, provident saepe facilis quo at nobis.                
             </td>
             <td>
-                <iframe src="https://ugm.ac.id" frameborder="0" width="100%" height="200px"></iframe>
+                <h1>LOREM</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui laborum eaque necessitatibus ad, nisi cumque libero illo saepe veniam tempora commodi quo fugit adipisci, ducimus quibusdam autem. Veritatis, quisquam tenetur!
             </td>
         </tr>
     </table>
 </body>
 </html>
+
