--- a/Pertemuan_5/cssProperty.html
+++ b/Pertemuan_5/cssProperty.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="cssProperty.css">
 </head>
 <body>
-    
+    <div>
+        <h3>Text Indent</h3>
+        <p class="indent">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, asperiores! Cupiditate veritatis explicabo voluptates nulla, ipsum odit eligendi totam vitae.</p>
+        <br>
+        <h3>Letter Spacing</h3>
+        <p class="spacing">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium repellendus itaque omnis incidunt a sequi rem dolore unde numquam.</p>
+        <br>
+        <h3>Word Spacing</h3>
+        <p class="word">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi distinctio odit sapiente debitis quod excepturi et. Quam accusamus assumenda aperiam.</p>
+        <br>
+        <h3>Line Height</h3>
+        <p class="line">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti praesentium tempore illo est culpa laboriosam quos, voluptas architecto dolores quam.</p>
+        <br>
+        <h3>White Space</h3>
+        <p class="white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, porro voluptas. Quae sint iusto doloremque alias, incidunt veniam expedita rem voluptates quia dolorum fugiat, aperiam ipsum nulla modi est. Ullam quos magni blanditiis quasi, voluptates rem esse quidem laborum temporibus aliquam, dignissimos harum porro, numquam facere ex asperiores explicabo nihil vero. Dolorum facilis quo recusandae quaerat rerum distinctio inventore quis deserunt, eius eveniet obcaecati similique aspernatur, mollitia et porro aliquid ratione! Inventore repellendus temporibus, consequuntur accusamus unde impedit blanditiis dolor aliquid, voluptates ipsam quis assumenda laudantium eum? Consequuntur officia autem facere alias incidunt hic quae enim quasi voluptates, recusandae ratione?</p>
+
+    </div>
 </body>
 </html>
