Task's directory added

--- a/Pertemuan_5/semantic.html
+++ b/Pertemuan_5/semantic.html
@@ -20,7 +20,7 @@
                 
                 <li>Contents</li>
             </ul>
-        </nav><a href="">Halaman<img src="https://static-00.iconduck.com/assets.00/openai-icon-1011x1024-uztb7qme.png" width="20px" alt=""></a>
+        </nav><a href=""><img src="https://static-00.iconduck.com/assets.00/openai-icon-1011x1024-uztb7qme.png" width="40px" alt=""></a>
         
     </header>
     <main>
@@ -51,6 +51,8 @@
             </section>
         </aside>
     </main>
-    <footer></footer>
+    <footer>
+        Copyrigth&copy; 2024
+    </footer>
 </body>
 </html>
