--- a/Pertemuan_6/index.html
+++ b/Pertemuan_6/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kamaluddin Arsyad</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 </head>
 <body>
+        <div class="card">
+            <div class="left"></div>
+            <div class="right">
+                <h2>Shift the overall look and feel by adding these wonderful 
+                    touches to furniture in your home</h2><br>
+                <p>Ever been in a room and felt like something was missing? Perhaps 
+                    it felt slightly bare and uninviting. I’ve got some simple tips 
+                    to help you make any room feel complete.</p>
+                <div class="contact">
+                    <img src="assets/avatar-michelle.jpg" width="40px" alt="">
+                    <div class="detail">
+                        <h5>Michelle Appleton</h5>
+                        <p>28 Jun 2020</p>
+                    </div>
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
+                    </div>
+                    <div class="share"><p>SHARE</p></div>
+                </div>
+            </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
