--- a/Pertemuan_6/praktikum.html
+++ b/Pertemuan_6/praktikum.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Processing...</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="praktikum.css">
 </head>
 <body>
-    
+    <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+        <li class="flex-item">6</li>
+    </ul><br><br><br><br>
+    <div class="container">
+        <header>Header</header>
+        <main>
+            <aside class="first">LEFT</aside>
+            <article><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quos, recusandae quasi odit, velit numquam dolorum tenetur rerum autem beatae maiores cupiditate nostrum quis vero repellendus ullam non accusantium. Architecto doloremque eius veniam laudantium id dicta unde assumenda cum a.</p></article>
+            <aside class="second">RIGHT</aside>
+        </main>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
