--- a/Pertemuan_9/index.html
+++ b/Pertemuan_9/index.html
@@ -22,38 +22,39 @@
     <div class="top"></div>
     <header class="w-100">
       <nav class="d-flex px-4 gap-3 bg-body-tertiary pt-3 pb-1">
-          <a class="navbar-brand text-dark" href="#">❤</a>
-            <div class="d-flex gap-3">
-              <a class="nav-link" aria-current="page" href="#">Pro</a>
-              <a class="nav-link" href="#">Teams</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link">Documentation</a>
-            </div>
+        <a class="navbar-brand text-dark" href="#">❤</a>
+        <div class="d-flex gap-3">
+          <a class="nav-link" aria-current="page" href="#">Pro</a>
+          <a class="nav-link" href="#">Teams</a>
+          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link">Documentation</a>
+        </div>
       </nav>
       <hr />
       <nav class="search px-4 py-3 flex-wrap d-flex">
+        
         <svg viewBox="0 0 780 250" width="80px" aria-hidden="true">
           <path
-            fill="#231F20"
-            d="M240,250h100v-50h100V0H240V250z M340,50h50v100h-50V50z M480,0v200h100V50h50v150h50V50h50v150h50V0H480z M0,200h100V50h50v150h50V0H0V200z"
+          fill="#231F20"
+          d="M240,250h100v-50h100V0H240V250z M340,50h50v100h-50V50z M480,0v200h100V50h50v150h50V50h50v150h50V0H480z M0,200h100V50h50v150h50V0H0V200z"
           ></path>
         </svg>
         <div
           class="search-group d-flex justify-content-between align-items-center"
-        >
+          >
           <div>
             <svg
-              width="15px"
-              height="15px"
+            width="15px"
+            height="15px"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 18 18"
               aria-hidden="true"
-            >
+              >
               <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g stroke="#777777" stroke-width="1.3">
                   <g>
                     <path
-                      d="M13.4044,7.0274 C13.4044,10.5494 10.5494,13.4044 7.0274,13.4044 C3.5054,13.4044 0.6504,10.5494 0.6504,7.0274 C0.6504,3.5054 3.5054,0.6504 7.0274,0.6504 C10.5494,0.6504 13.4044,3.5054 13.4044,7.0274 Z"
+                    d="M13.4044,7.0274 C13.4044,10.5494 10.5494,13.4044 7.0274,13.4044 C3.5054,13.4044 0.6504,10.5494 0.6504,7.0274 C0.6504,3.5054 3.5054,0.6504 7.0274,0.6504 C10.5494,0.6504 13.4044,3.5054 13.4044,7.0274 Z"
                     ></path>
                     <path d="M11.4913,11.4913 L17.8683,17.8683"></path>
                   </g>
@@ -72,9 +73,7 @@
     </header>
     <main>
       <div class="bg-primary top-hero text-white text-center">
-        <span
-          class="d-flex flex-column gap-5 flex-nowrap m-auto d-block"
-        >
+        <span class="d-flex flex-column gap-5 flex-nowrap m-auto d-block">
           <h1 class="mb-5">Build amazing things</h1>
           <p style="font-size: 20px">
             We're GitHub, the company behind the npm Registry and npm CLI. We
@@ -89,21 +88,19 @@
           </p>
         </span>
         <a
-          class="text-decoration-none mt-5 mx-5 badge rounded-pill text-bg-warning py-3 px-5"
-          href=""
-          >Sign up for free</a
+        class="text-decoration-none mt-5 mx-5 badge rounded-pill text-bg-warning py-3 px-5"
+        href=""
+        >Sign up for free</a
         >
         <a
-          class="text-decoration-none mt-5 mx-5 badge rounded-pill py-3 px-5"
-          href=""
-          >Learn about Pro</a
+        class="text-decoration-none mt-5 mx-5 badge rounded-pill py-3 px-5"
+        href=""
+        >Learn about Pro</a
         >
       </div>
       <div class="text-center main-hero pt-5">
         <img src="./assets/under.png" alt="" />
-        <span
-          class="d-flex flex-column flex-nowrap gap-5 mt-5 m-auto"
-        >
+        <span class="d-flex flex-column flex-nowrap gap-5 mt-5 m-auto">
           <h2>
             Bring the best of open source to you, your team, and your company
           </h2>
@@ -119,15 +116,15 @@
       </div>
     </main>
     <hr />
-    <footer class="d-flex p-5 flex-wrap gap-5 ">
+    <footer class="d-flex p-5 flex-wrap gap-5">
       <div>
         <svg class="mb-5" viewBox="0 0 27.23 27.23" aria-hidden="true">
           <rect fill="#333333" width="27.23" height="27.23" rx="2"></rect>
           <polygon
             fill="#fff"
             points="5.8 21.75 13.66 21.75 13.67 9.98 17.59 9.98 17.58 21.76 21.51 21.76 21.52 6.06 5.82 6.04 5.8 21.75"
-          ></polygon>
-        </svg>
+            ></polygon>
+          </svg>
         <svg
           aria-hidden="true"
           role="img"
@@ -137,34 +134,34 @@
           height="50"
           fill="black"
           style="display: inline-block; user-select: none; vertical-align: top"
-        >
+          >
           <path
-            fill-rule="evenodd"
-            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+          fill-rule="evenodd"
+          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
           ></path>
-        </svg>
-      </div>
-      <div class="down d-flex flex-row flex-wrap">
-        <div>
-          <h5 class="mb-5"><b>Support</b></h5>
-          <p>Help</p>
-          <p>Advisories</p>
-          <p>Status</p>
-          <p>Contact npm</p>
+          </svg>
         </div>
-        <div>
-          <h5 class="mb-5"><b>Company</b></h5>
-          <p>About</p>
-          <p>Blog</p>
-          <p>Press</p>
-        </div>
-        <div>
-          <h5 class="mb-5"><b>Terms & Policies</b></h5>
-          <p>Policies</p>
-          <p>Term of Use</p>
-          <p>Code of Conduct</p>
-          <p>Privacy</p>
-        </div>
+        <div class="down d-flex flex-row flex-wrap">
+          <div>
+            <h5 class="mb-5"><b>Support</b></h5>
+            <p>Help</p>
+            <p>Advisories</p>
+            <p>Status</p>
+            <p>Contact npm</p>
+          </div>
+          <div>
+            <h5 class="mb-5"><b>Company</b></h5>
+            <p>About</p>
+            <p>Blog</p>
+            <p>Press</p>
+          </div>
+          <div>
+            <h5 class="mb-5"><b>Terms & Policies</b></h5>
+            <p>Policies</p>
+            <p>Term of Use</p>
+            <p>Code of Conduct</p>
+            <p>Privacy</p>
+          </div>
       </div>
     </footer>
     <script
@@ -173,4 +170,20 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+  </html>
+
+<body>
+    <div class="top"></div>
+    <header>
+      <nav class="d-flex px-4 gap-3 bg-body-tertiary pt-3 pb-1"></nav>
+      <nav class="search px-4 py-3 flex-wrap d-flex"></nav>
+    </header>
+    <main>
+      <div class="bg-primary top-hero text-white text-center"></div>
+      <div class="text-center main-hero pt-5"></div>
+    </main>
+    <footer>
+      <div></div>
+      <div class="down d-flex flex-row flex-wrap"></div>
+    </footer>
+</body>
