--- a/Pertemuan_10/index.html
+++ b/Pertemuan_10/index.html
@@ -13,10 +13,7 @@
       <button class="btn btn-warning" onclick="cetakKonsol()">Cetak konsol</button>
       <button class="btn btn-success" onclick="gantiJudul()">Ganti Judul</button>
       <button class="btn btn-danger" onclick="clearPage()">Bersihkan Halaman</button>
-      <br>
-      <br>
-      <br>
-      <h1 class="text-center"></h1>
+      <h1 class="text-center mt-5 mb-2"></h1>
         <table class="table" border="1">
             <thead>
                 <tr>
