--- a/Pertemuan_10/index.html
+++ b/Pertemuan_10/index.html
@@ -14,7 +14,7 @@
       <button class="btn btn-success" onclick="gantiJudul()">Ganti Judul</button>
       <button class="btn btn-danger" onclick="clearPage()">Bersihkan Halaman</button>
       <h1 class="text-center mt-5 mb-2"></h1>
-        <table class="table" border="1">
+        <table class="table">
             <thead>
                 <tr>
                     <th>Nama</th>
